grid style markup

--- a/lib/sass/centurion/_grid.scss
+++ b/lib/sass/centurion/_grid.scss
@@ -12,46 +12,46 @@ $gutter-half: 10px;
  * @markup
  *   <div class="ctn-container">
  *     <div class="ctn-row">
- *       <div class="ctn-grid-2">
+ *       <div class="ctn-grid-2 ctn-tablet-1 ctn-mobile-1">
  *         <span class="box-grid"></span>
  *       </div>
- *       <div class="ctn-grid-22">
- *         <span class="box-grid"></span>
- *       </div>
- *     </div>
- *
- *     <div class="ctn-row">
- *       <div class="ctn-grid-3">
- *         <span class="box-grid"></span>
- *       </div>
- *       <div class="ctn-grid-21">
+ *       <div class="ctn-grid-22 ctn-tablet-11 ctn-mobile-5">
  *         <span class="box-grid"></span>
  *       </div>
  *     </div>
  *
  *     <div class="ctn-row">
- *       <div class="ctn-grid-4">
+ *       <div class="ctn-grid-3 ctn-tablet-2 ctn-mobile-2">
  *         <span class="box-grid"></span>
  *       </div>
- *       <div class="ctn-grid-20">
- *         <span class="box-grid"></span>
- *       </div>
- *     </div>
- *
- *     <div class="ctn-row">
- *       <div class="ctn-grid-5">
- *         <span class="box-grid"></span>
- *       </div>
- *       <div class="ctn-grid-19">
+ *       <div class="ctn-grid-21 ctn-tablet-10 ctn-mobile-4">
  *         <span class="box-grid"></span>
  *       </div>
  *     </div>
  *
  *     <div class="ctn-row">
- *       <div class="ctn-grid-6">
+ *       <div class="ctn-grid-4 ctn-tablet-3 ctn-mobile-3">
  *         <span class="box-grid"></span>
  *       </div>
- *       <div class="ctn-grid-18">
+ *       <div class="ctn-grid-20 ctn-tablet-9 ctn-mobile-3">
+ *         <span class="box-grid"></span>
+ *       </div>
+ *     </div>
+ *
+ *     <div class="ctn-row">
+ *       <div class="ctn-grid-5 ctn-tablet-4 ctn-mobile-4">
+ *         <span class="box-grid"></span>
+ *       </div>
+ *       <div class="ctn-grid-19 ctn-tablet-8 ctn-mobile-2">
+ *         <span class="box-grid"></span>
+ *       </div>
+ *     </div>
+ *
+ *     <div class="ctn-row">
+ *       <div class="ctn-grid-6 ctn-tablet-5 ctn-mobile-5">
+ *         <span class="box-grid"></span>
+ *       </div>
+ *       <div class="ctn-grid-18 ctn-tablet-7 ctn-mobile-1">
  *         <span class="box-grid"></span>
  *       </div>
  *     </div>
